--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,18 +1,15 @@
 .App {
   text-align: center;
 }
-
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
-
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -23,11 +20,9 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
-
 .App-link {
   color: #61dafb;
 }
-
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -36,32 +31,48 @@
     transform: rotate(360deg);
   }
 }
-
 .banner-card{
   width: 100vw;
   margin-top: 2vh;
   margin-bottom: 3vh;
   position: relative;
   height: 70vh;
-
 }
-
 .banner-img{
-  width: 100%;
+  width: 99%;
   height: 70vh;
 }
-
 .banner-title{
-  position:absolute; 
+  position: absolute;
   top:45vh;
-  left: 5vw;
-  color: white;
+  left:5vw;
+  color:white;
 }
 .banner-text{
   position: absolute;
-  color:white;
-  top: 55vh;
+  color: white;
+  top:55vh;
   left: 5vw;
 }
 
-
+.movies-list{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 1rem;
+} 
+ .movie-card{
+  position: relative;
+  width: 20vw;
+  margin: 1rem;
+  color: white;
+ }
+ .movie-title{
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
+ }
+ .movies-button{
+  position: absolute;
+  bottom: 2rem;
+ }
