--- a/bibliotheca/src/App.css
+++ b/bibliotheca/src/App.css
@@ -36,3 +36,29 @@
     transform: rotate(360deg);
   }
 }
+.banner-card{
+  width: 100vw;
+  height: 70vh;
+  margin-top: 2vh;
+  margin-bottom: 3vh;
+  position: absolute;
+}
+
+.banner-img{
+  width: 100%;
+  height: 70vh;
+}
+.banner-title{
+  position: absolute;
+  color:black;
+  top: 58vh;
+  left: 5vw;
+
+}
+.banner-text{
+  position: absolute;
+  top: 65vh;
+  color: black;
+  left: 5vw;
+  font-style: italic;
+}
