--- a/module4/resume-builder/src/components/contact.css
+++ b/module4/resume-builder/src/components/contact.css
@@ -6,7 +6,7 @@
 
 .contact-form{
     width: 50%;
-    box-shadow: 0px 2px 9px lightgrey;
+    box-shadow: 0px 2px 9px #F2F1F0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -15,7 +15,7 @@
 
 .preview-form{
     width: 35%;
-    box-shadow: 0px 2px 9px lightgrey;
+    box-shadow: 0px 2px 9px #F2F1F0;
 }
 
 .contact-form-details{
@@ -36,7 +36,7 @@
     margin-top: 5px;
     border:none;
     outline: none;
-    background-color: lightgrey;
+    background-color: #F2F1F0;
     border-radius: 5px;
     font-weight: 500;
     font-size: 20px;
@@ -45,8 +45,22 @@
 
 .full{
     width: 95%;
-} 
-.next, .back{
+}
+
+.btn-full{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+
+}
+ .back{
     text-align: center;
     text-decoration: none;
+    width: 100%;
+    height: 100%;
+    color: seagreen;
+
+}
+.back:hover{
+    color: white;
 }
