--- a/module4/resume-builder/src/components/finalize.css
+++ b/module4/resume-builder/src/components/finalize.css
@@ -7,3 +7,13 @@
     box-shadow: 0 2px 9px lightgrey;
     width: 50%;
 }
+.download-options{
+    height: 400px;
+    width: 5%;
+    margin-top: 10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
